--- a/style.css
+++ b/style.css
@@ -658,3 +658,15 @@ body {
 		min-width: 420px;
 	}
 }
+
+footer {
+	/* background-color: #f5f5f5; */
+	padding: 40px 0;
+  }
+  
+  .footer-copyright {
+	text-align: center;
+	font-size: 14px;
+	margin-top: 20px;
+	color: #999;
+  }
